# UGroceryDelivery

./: CMakeLists.txt  create.cpp  create.h  create.ui  description.h  description.ui  list.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui
Item/: create.cpp  create.h  food.cpp  food.h  housekeeping.cpp  housekeeping.h  item.cpp  item.h  itemcreate.cpp  itemcreate.h  sandwich.cpp  sandwich.h
User/: user.cpp  user.h
